data/derived/comb/progs/unify/prog4278.ml.out
Characters 27-28:
  let _=build(makeRand(70,69)2);;
                             ^
Error: This expression has type int but an expression was expected of type
         int * int
